--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -1,25 +1,34 @@
-name: Generate Datas
+name: Generate Snake Animation
 
 on:
   schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+    - cron: "0 */12 * * *"
   workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
-    name: Jobs to update datas
+    name: Generate Snake
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+
       # Snake Animation
       - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: larisssacm
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          svg_out_path: dist/github-contribution-snake.svg
+          gif_out_path: dist/github-contribution-snake.gif
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      - name: Push to branch
+        uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
+          keep_history: true
+          commit_message: "Update snake animation"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
